--- a/brux/index.html
+++ b/brux/index.html
@@ -25,8 +25,51 @@
                   <a href="how-it-works.html">How it works</a>
                   <a href="results.html">Results</a>
             </nav>
+
       </header>
 
+      <section class="hero">
+            <h2>
+                  Keep your teeth healthy and happy
+            </h2>
+            <p>
+                  With Brux Dental products, you can keep a smile that’s worth protecting, whatever you eat.
+            </p>
+            <a href="how-it-works.html" class="button">Read more</a>
+      </section>
+
+      <section class="content">
+            <div class="image">
+                  <img src="./assets/image1.jpg" srcset="assets/image1.jpg, assets/image1-2x.jpg 2x">
+            </div>
+
+            <div class="content">
+                  <h3>
+                        The world’s best toothpastes and mouthwashes
+                  </h3>
+                  <p>
+                        We work with some of the world’s leading dentists and dental scientists to provide you with the
+                        best products to care for your teeth and gums.
+                  </p>
+            </div>
+      </section>
+
+      <section class="content">
+            <div class="image">
+                  <img src="assets/image2.jpg" srcset="assets/image2.jpg, assets/image2-2x.jpg 2x">
+            </div>
+
+            <div class="content">
+                  <h3>
+                        Top protection against sugary effects
+                  </h3>
+                  <p>
+                        While it’s sensible to not go too overboard with your sugar intake, we know that you’re a real
+                        person too. Our products have been proven to neutralize sugar better than any leading-brand
+                        competitor.
+                  </p>
+            </div>
+      </section>
 </body>
 
 </html>
