--- a/brux/index.html
+++ b/brux/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet">
       <link rel="stylesheet" href="styles.css">
       <script src="animation.js" defer></script>
+      <script src="eyes.js" defer></script>
       <script src="script.js" defer></script>
       <title>Brux</title>
 </head>
@@ -19,7 +20,13 @@
       <header>
             <h1>Brux</h1>
             <div class="face">
-                  <img src="./assets/face.svg" alt="face" />
+                  <img src="./assets/face-without-eyes.svg" alt="face" />
+                  <div class="iris iris-left">
+                        <div></div>
+                  </div>
+                  <div class="iris iris-right">
+                        <div></div>
+                  </div>
             </div>
             <nav>
                   <a href="products.html">Products</a>
